# telegram-notifier

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
telegram_notifier/: __init__.py  cli.py  notifier.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_files.py  test_integration.py  test_notifier.py
